[gd_scene load_steps=8 format=3 uid="uid://pxrv54b6rrrl"]

[ext_resource type="Script" path="res://Scripts/viewer.gd" id="1_hnkqj"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="2_axg8d"]
[ext_resource type="Script" path="res://Scripts/side_menu.gd" id="3_y06dj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xjf71"]
sky_top_color = Color(0.658824, 0.364706, 0, 1)
sky_horizon_color = Color(0.792157, 0.710784, 0.590196, 1)
sky_energy_multiplier = 3.15
ground_bottom_color = Color(0.509804, 0.478431, 0.360784, 1)
ground_horizon_color = Color(0.792157, 0.710784, 0.590196, 1)

[sub_resource type="Sky" id="Sky_b0m47"]
sky_material = SubResource("ProceduralSkyMaterial_xjf71")

[sub_resource type="Environment" id="Environment_eloud"]
background_mode = 2
sky = SubResource("Sky_b0m47")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="SphereShape3D" id="SphereShape3D_jthe3"]

[node name="Viewer" type="Node3D"]
script = ExtResource("1_hnkqj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_eloud")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("2_axg8d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("SphereShape3D_jthe3")
disabled = true

[node name="Camera" type="Camera3D" parent="CharacterBody3D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("3_y06dj")

[node name="FpsCounter" type="Label" parent="Control"]
modulate = Color(0.764706, 0.0980392, 0.631373, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -115.0
offset_bottom = 26.0
grow_horizontal = 0
size_flags_horizontal = 4
text = "fps"
horizontal_alignment = 1

[node name="SidePanel" type="Panel" parent="Control"]
self_modulate = Color(0.290196, 0.0980392, 0.258824, 0.368627)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -852.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SidePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabel" type="Label" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2

[node name="DisplayLabel" type="Label" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Display"
horizontal_alignment = 1

[node name="FpsCheckbox" type="CheckBox" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "  Show FPS"

[node name="VsyncCheckbox" type="CheckBox" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "  Enable VSYNC"

[node name="FullscreenCkecbox" type="CheckBox" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen mode"

[node name="ControlsCheckbox" type="CheckBox" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Show controls"

[node name="HSeparator2" type="HSeparator" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2

[node name="ColorsLabel" type="Label" parent="Control/SidePanel/VBoxContainer"]
layout_mode = 2
text = "Colors
"
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="Control/SidePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -31.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
text = "Exit"

[node name="ControlsLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -182.0
grow_horizontal = 0
grow_vertical = 0
text = "Controls:
ESC - settings
w, a, s, d - move camera
mouse - rotate camera
spacebar - move up
ctrl - move down
shift - move 2x speed"
horizontal_alignment = 1

[connection signal="toggled" from="Control/SidePanel/VBoxContainer/FpsCheckbox" to="Control" method="_on_fps_checkbox_toggled"]
[connection signal="toggled" from="Control/SidePanel/VBoxContainer/VsyncCheckbox" to="Control" method="_on_vsync_checkbox_toggled"]
[connection signal="toggled" from="Control/SidePanel/VBoxContainer/FullscreenCkecbox" to="Control" method="_on_fullscreen_ckecbox_toggled"]
[connection signal="toggled" from="Control/SidePanel/VBoxContainer/ControlsCheckbox" to="Control" method="_on_controls_checkbox_toggled"]
[connection signal="pressed" from="Control/SidePanel/ExitButton" to="Control" method="_on_exit_button_pressed"]
